[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"



[dependencies]
actix-web = "4.4.1"
async-trait = "0.1.77"
derive_more = "0.99.17"
json = "0.12.4"
surrealdb = "1.0.2"
uuid = "1.6.1"


[dependencies.serde]
version = "1.0.194"
features = ["derive"]

[dependencies.validator]
version = "0.16.1"
features = ["derive"]